<resources>
    <string name="app_name">Ozbah</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current">Current</string>
    <string name="waiting">Waiting</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="title_activity_my_adapter" translatable="false">MyAdapter</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="add_name">Insert New Name</string>
    <string name="game">Next</string>
    <string name="alertTitle">Select Loser Team</string>
    <string name="p3p4">Player 3 and 4</string>
    <string name="p1p2">Player 1 and 2</string>
    <string name="alertAddPeople">Please Insert 4 People</string>
    <string name="special_case">Special Case, Plays on Next Game!</string>
    <string name="p1p3">Player 1 and 3</string>
    <string name="p2p4">Player 2 and 4</string>
    <string name="msgFirstGame">(Player 1,3) VS (Player 2,4)</string>
    <string name="alertTitleFirstGame">This is the First Game</string>
    <string name="firstGame">First Game</string>
    <string name="p1p3vsp2p4" translatable="false">1,3 VS 2,4</string>
    <string name="load">Load</string>
    <string name="already_registered">Name Already Registered</string>
    <string name="edit">Edit</string>
    <string name="alertTitleEditName">Edit or Delete Name</string>
    <string name="msgEditName">Edit Name</string>
    <string name="crash_toast_text" translatable="false">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="no_game_saved">There is no saved game. Please add new people first!</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="select_player_set">Select Number of Players Per Game:</string>
    <string name="p2set">2 Players</string>
    <string name="p4set">4 Players</string>
    <string name="someting_went_wrong">Something went wrong.. please try again</string>
    <string name="gameSet">Switch</string>
    <string name="current_player_message">Current Number of Players is :</string>
    <string name="current_player_set_4_message" translatable="false">Current Number of Players is : 4 Players</string>
    <string name="current_player_set_2_message" translatable="false">Current Number of Players is : 2 Players</string>
    <string name="alertAdd2People">Please Insert 2 People</string>
    <string name="position">Change Position</string>
    <string name="change_position">Select New Position</string>
    <string name="change_position_message">Set The Selected Player (Before) One Of The Folowing Players:</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9702151899060730/9137172002</string>
    <string name="device_id" translatable="false">24D5E40D4DAF8232BBDFD6B25180F555</string>
    <string name="player">Player</string>
    <string name="title_activity_analytics_application" translatable="false">AnalyticsApplication</string>
    <string name="downloadapp">Download Ozbah App From Android Play Store \n https://play.google.com/store/apps/details?id=com.ahmadssb.queueozbah</string>
    <string name="title_activity_events_list">EventsList</string>
    <string name="title_activity_register_event">RegisterEvent</string>
    <string name="title_activity_online_game">OnlineGame</string>
    <string name="newEvent">Create New Event</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_event_password">Enter Event Password</string>
    <string name="select_event">Select an Event:</string>
    <string name="loading_events">Loading Events</string>
    <string name="eventId">id</string>
    <string name="eventName">event name</string>
    <string name="dot">.</string>
    <string name="share">Share</string>
    <string name="action_online_game">Online</string>
    <string name="type_password">Please Insert Event\'s Password</string>
    <string name="empty_event_name">Please Insert Event Name</string>
    <string name="creating_new_event">Creating new Event…</string>
    <string name="checking_password">Checking Password…</string>
    <string name="saving_data_online">Saving Data Online</string>
    <string name="loading_data_online">Loading Data Online …</string>
    <string name="action_offline">Offline</string>
    <string name="action_offline_description">Saving Data Only On This Device</string>
    <string name="removeUsers">Remove</string>
    <string name="removing_event_users">Removing All Users...</string>

</resources>
