<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_online"
        android:orderInCategory="100"
        android:title="@string/action_online_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:title="@string/load"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_insert"
        android:orderInCategory="100"
        android:title="@string/add_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next_game"
        android:orderInCategory="100"
        android:title="@string/game"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>
