<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.ahmadssb.queue.AnalyticsApplication">

    <TextView
        android:id="@+id/tvEventID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventId"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/tvDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Space
        android:layout_width="7dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</LinearLayout>
