<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/btnGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game" />

                <Button
                    android:id="@+id/btnChangeGameSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameSet" />

                <Button
                    android:id="@+id/btnLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <Button
                        android:id="@+id/btnShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />


                    <TextView
                        android:id="@+id/tvP1P3vsP2P4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:paddingLeft="5dp"
                        android:text="@string/p1p3vsp2p4"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ff0000" />


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/current"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>


                <GridView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gvCurrent"
                    android:layout_gravity="center_vertical"
                    android:numColumns="2"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/waiting"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <GridView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gvWaiting"
                    android:layout_gravity="center_vertical"
                    android:numColumns="2"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
